force-app/main/default/objects/Lead/fields/SCT_CallType__c.field-meta.xml
<CustomField>
    <fullName>SCT_CallType__c</fullName>
    <description>This fields stores Next Call Type from System Call Task NextCallType__c. Copied by process builder</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FUA</fullName>
                <label>Appointment</label>
            </value>
            <value>
                <fullName>TCC</fullName>
                <label>Contact Customer</label>
            </value>
            <value>
                <fullName>FUP</fullName>
                <label>Follow-up</label>
            </value>
            <value>
                <fullName>UCC</fullName>
                <label>Unreached Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>