force-app/main/default/objects/Lead/fields/SCT_FollowupDateTime__c.field-meta.xml
<CustomField>
    <fullName>SCT_FollowupDateTime__c</fullName>
    <label>Followup Date Time</label>
    <type>DateTime</type>
</CustomField>