force-app/main/default/objects/Lead/fields/SCT_IsAssignedToMe__c.field-meta.xml
<CustomField>
    <fullName>SCT_IsAssignedToMe__c</fullName>
    <description>Returns true if the System Call Task Owner is same as current user</description>
    <formula>$User.Id = SCT_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Call Task Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>