force-app/main/default/objects/Lead/fields/SCT_Owner__c.field-meta.xml
<CustomField>
    <fullName>SCT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Call Task Owner.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>