force-app/main/default/objects/Lead/fields/SCT_TaskOverdue__c.field-meta.xml
<CustomField>
    <fullName>SCT_TaskOverdue__c</fullName>
    <description>Returns number of days the system call task is overdue</description>
    <formula>if(( SCT_FollowupDateTime__c - Now() &lt; 0),
NOW() - SCT_FollowupDateTime__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>