force-app/main/default/objects/Lead/fields/SourceCodeAuto__c.field-meta.xml
<CustomField>
    <fullName>SourceCodeAuto__c</fullName>
    <label>Source Code Auto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>