force-app/main/default/objects/Lead/fields/StartWhen__c.field-meta.xml
<CustomField>
    <fullName>StartWhen__c</fullName>
    <label>Start When</label>
    <length>255</length>
    <type>Text</type>
</CustomField>