force-app/main/default/objects/Lead/fields/ToBeArchived__c.field-meta.xml
<CustomField>
    <fullName>ToBeArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by the integration system to archive the leads.</description>
    <label>To Be Archived</label>
    <type>Checkbox</type>
</CustomField>