force-app/main/default/objects/Lead/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <description>S-8 created for mapping with the Poseidon fields for Lead Imports</description>
    <label>Transportation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>