force-app/main/default/objects/Lead/fields/TritonId__c.field-meta.xml
<CustomField>
    <fullName>TritonId__c</fullName>
    <description>Triton Id</description>
    <inlineHelpText>Triton Id</inlineHelpText>
    <label>Triton Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>