force-app/main/default/objects/Lead/fields/UserSelectedSourceCode__c.field-meta.xml
<CustomField>
    <fullName>UserSelectedSourceCode__c</fullName>
    <label>User Selected Source Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>