force-app/main/default/objects/Lead/fields/WhenMonth__c.field-meta.xml
<CustomField>
    <fullName>WhenMonth__c</fullName>
    <description>Represents the month of 'When' field in Log A Call Component</description>
    <label>When Month</label>
    <length>15</length>
    <type>Text</type>
</CustomField>