force-app/main/default/objects/Lead/fields/WhenYear__c.field-meta.xml
<CustomField>
    <fullName>WhenYear__c</fullName>
    <description>Represents the Year on 'When' field in Log a Call component</description>
    <label>When Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>