force-app/main/default/objects/Lead/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <businessProcess>Company</businessProcess>
    <description>School or Organizations</description>
    <label>Company</label>

</RecordType>