force-app/main/default/objects/Lead/recordTypes/Referral.recordType-meta.xml
<RecordType>
    <fullName>Referral</fullName>
    <active>true</active>
    <businessProcess>Referral</businessProcess>
    <label>Referral</label>
    
</RecordType>