force-app/main/default/objects/Lead/validationRules/BlockStatusChangeToConvertedWhenNotConv.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockStatusChangeToConvertedWhenNotConv</fullName>
    <active>true</active>
    <description>Prevent updating the lead status to converted when the lead is not actually converted</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),!IsConverted,ISPICKVAL(Status , 'Converted'))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Lead Status can't be changed to Converted status.</errorMessage>
</ValidationRule>