force-app/main/default/objects/Lead/validationRules/DOBShouldNotBeAFutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBShouldNotBeAFutureDate</fullName>
    <active>true</active>
    <description>DOB should not be a future date</description>
    <errorConditionFormula>And(
NOT($Setup.BypassTriggersValidation__c.DisableValidation__c)
,
DOB__c>Today()
)</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be a future value!
Please enter a valid Date of Birth.</errorMessage>
</ValidationRule>