force-app/main/default/objects/Lead/validationRules/FirstNameIsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameIsMandatory</fullName>
    <active>true</active>
    <description>Firstname is mandatory</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ), 
ISBLANK(FirstName )
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>