force-app/main/default/objects/Lead/validationRules/ValidRankingValues.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidRankingValues</fullName>
    <active>true</active>
    <description>Prevent entering invalid ranking value</description>
    <errorConditionFormula>And(NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),
OR( Ranking__c >10 , Ranking__c &lt;1)
)</errorConditionFormula>
    <errorMessage>Ranking Can only have number between 1 and 10</errorMessage>
</ValidationRule>