force-app/main/default/objects/Lead/listViews/All_Leads2.listView-meta.xml
<ListView>
    <fullName>All_Leads2</fullName>
    <columns>FULL_NAME</columns>
    <columns>Ranking__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Program__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>RequestType__c</columns>
    <columns>Gender__c</columns>
    <columns>Partner__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>