force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Ranking__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Program__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>RequestType__c</columns>
    <columns>Gender__c</columns>
    <columns>Partner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <label>All Open Leads</label>
</ListView>