force-app/main/default/objects/Lead/listViews/My_leads.listView-meta.xml
<ListView>
    <fullName>My_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Ranking__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Program__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>RequestType__c</columns>
    <columns>Gender__c</columns>
    <columns>Partner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My leads</label>
</ListView>