force-app/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
    <fullName>MyUnreadLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Ranking__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Program__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>RequestType__c</columns>
    <columns>Gender__c</columns>
    <columns>Partner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Unread Leads</label>
</ListView>