force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Ranking__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Program__c</columns>
    <columns>DOB__c</columns>
    <columns>Age__c</columns>
    <columns>RequestType__c</columns>
    <columns>Gender__c</columns>
    <columns>Partner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Leads</label>
</ListView>